--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>login</title>
+    <title>LOGIN</title>
 </head>
 
 <body>
@@ -25,8 +25,8 @@
                 </div>
                
                 <button class="btn-login">Login</button>
-                    <p id="p">OU</p>
-                <button class="btn-login">cadastre-se</button>
+                    <p id="p">OU</p>	
+					<a href="cadastro.html"><button class="btn-vlt">CADASTRAR</button></a>
 
             </div>
 
